--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bulma": "^0.6.2",
     "firebase": "^4.12.1",
+    "qrcode": "^1.2.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-firebase-file-uploader": "^2.4.1",
